--- a/index1.html
+++ b/index1.html
@@ -109,7 +109,7 @@
   <p id="label">randomness: 5</p>
 
   <script>
-    const songFiles = ["song1.wav", "song2.wav", "song3.wav"]; // Replace with actual file paths
+    const songFiles = ["test1.wav", "test2.wav"]; // Replace with actual file paths
     const audioContext = new (window.AudioContext || window.webkitAudioContext)();
     const audioBuffers = [];
     let isPlaying = false;
